--- a/source/localizable/faq.fr.html.erb
+++ b/source/localizable/faq.fr.html.erb
@@ -12,6 +12,8 @@
     <h3 class="faq__question">Cette campagne a-t-elle un caractère scientifique ?</h3>
     <p>La campagne a été développée en échange avec la Direction de la santé publique du canton de Berne. Cette institution confirme le besoin urgent d’informations les plus complètes possibles de la part de la population pour combattre l’épidémie. Des études scientifiques (dont celles du Dr. Jan von Overbeck) étayent l’approche actuellement mise en œuvre avec le Covid-19-Tracker.</p>
     <h3 class="faq__question">Qu’advient-il de mes données ?</h3>
-    <p>Les données récoltées au moyen du Covid-19-Tracker ne peuvent pas être associées à des personnes. Ces données comprennent le code postal, l’âge, le genre et quelques informations complémentaires, mais aucun nom ni donnée à caractère personnel. Les quatre derniers chiffres du numéro de téléphone sont requis pour éviter un usage abusif.<br>Les données seront hébergées sur des serveurs suisses.</p>
+    <p>Les données récoltées au moyen du Covid-19-Tracker ne peuvent pas être associées à des personnes. Ces données comprennent le code postal, l’âge, le genre et quelques informations complémentaires, mais aucun nom ni donnée à caractère personnel.</p>
+    <h3 class="faq__question">Les données ne risquent-elles pas d’être faussées si, par exemple, les personnes habitant des zones urbaines densément interconnectées, sont plus nombreuses à répondre au questionnaire ?</h3>
+    <p>Ce biais géographique peut être corrigé puisque le questionnaire est aussi rempli par des personnes en bonne santé. Le nombre de personnes infectées peut dont être divisé par la population totale. Le pour cent ou pour mille résultant aura une pertinence plus élevée.</p>
   </section>
 </div>
