Replaced yes with maybe on wasInContactWithCase

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -154,7 +154,7 @@
         <div class="radio-wrap">
           <label class="radio-item" for="wasInContactWithCase-1">
             <input class="js-toggle input" type="radio" name="wasInContactWithCase" id="wasInContactWithCase-1" value="1" data-show="wrap-dateContacted">
-            <span><%= t(:yesAnswer) %></span>
+            <span><%= t(:maybe) %></span>
           </label>
           <label class="radio-item" for="wasInContactWithCase-0">
             <input class="js-toggle input" type="radio" name="wasInContactWithCase" id="wasInContactWithCase-0" value="0" data-hide="wrap-dateContacted">
