--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -10,6 +10,7 @@
       <li><a href="/" data-lang="de" class="js-setLang langlink ml-4">Deutsch</a></li>
       <li><a href="/fr" data-lang="fr" class="js-setLang langlink ml-4">Français</a></li>
       <li><a href="/it" data-lang="it" class="js-setLang langlink ml-4">Italiano</a></li>
+      <li><a href="/en" data-lang="en" class="js-setLang langlink ml-4">English</a></li>
     </ul>
     <div>
       <%= partial "partials/icon" %>
