--- a/source/localizable/map.html.erb
+++ b/source/localizable/map.html.erb
@@ -3,9 +3,19 @@
 <div class="container">
   <section class="subpage">
     <h2>Map</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur ipsum nesciunt, asperiores eos, repudiandae ipsa quos ea, adipisci pariatur eius ullam aut? Incidunt harum rerum quis perspiciatis aspernatur! Similique, dicta.</p>
+    <p>We have so far</p>
+    <ul>
+      <li><b>860 (todo)</b> total submissions </li>
+      <li><b>150k (todo)</b> clinical potential positives </li>
+    </ul>
     <div class="map-container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2702.0610471979835!2d8.517107316396583!3d47.37172697916982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900a181168c863%3A0x2becdf7d6832dd74!2sDiluno%20GmbH!5e0!3m2!1sen!2sch!4v1585321529608!5m2!1sen!2sch" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <p>Fraction of clinical positive submissions</p>
+      <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=fraction " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+    <br>
+    <div class="map-container">
+      <p>Total Submissions </p>
+      <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=submissions " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
   </section>
 </div>
