--- a/source/localizable/map.html.erb
+++ b/source/localizable/map.html.erb
@@ -4,6 +4,7 @@
   <section class="subpage">
     <h2>Map</h2>
     <div class="map-container">
+      <p>Total Antworten: <b><span id="totalsubs">lade...</span></b></p>
       <p>Anteil klinischer Verdachtsfälle</p>
       <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=fraction " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
@@ -14,12 +15,14 @@
     </div>
   </section>
   <script>
+    
     const http = new XMLHttpRequest()
-    http.open("GET", "https://covid-export.apps-customer.21023576175   0.ninegcp.ch/count")
+    http.open("GET", "https://api.covidtracker.ch/count")
     http.send()
     http.onload = () => { 
-      console.log(http.responseText)
-      // document.getElementById('totalsubs').innerHTML = http.responseText
+      let s = http.responseText;
+      s = s.slice(0, 3) + "'" + s.slice(3);
+      document.getElementById('totalsubs').innerHTML = s
     }
 
 
