--- a/source/localizable/map.html.erb
+++ b/source/localizable/map.html.erb
@@ -3,16 +3,16 @@
 <div class="container">
   <section class="subpage">
     <h2>Map</h2>
+    <p>Total Antworten: <b><span id="totalsubs">lade...</span></b></p>
+    <h3>Anteil klinischer Verdachtsfälle</h3>
+    <p>Verhältnis zwischen den nach unserer "case definition" klassifizierten Fällen und der totalen Anzahl an Antworten, pro Postleitzahl.</p>
     <div class="map-container">
-      <p>Total Antworten: <b><span id="totalsubs">lade...</span></b></p>
-      <p>Anteil klinischer Verdachtsfälle</p>
       <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=fraction " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
     <br>
-    <br>
-    <br>
+    <h3>Einreichungen total</h3>
+    <p>Totale Anzahl von Antworten, pro Postleitzahl.</p>
     <div class="map-container">
-      <p>Einreichungen total </p>
       <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=submissions " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
   </section>
