--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -24,6 +24,13 @@
     <p><b><%= t(:press) %></b><br><a href="mailto:info@covidtracker.ch">press@covidtracker.ch</a></p>
     <p><b><%= t(:technology) %></b><br><a href="mailto:info@covidtracker.ch">tech@covidtracker.ch</a></p>
     <br>
-    <p>Milliways GmbH<br>Tizian & Luca Naterop<br>Bauhallengasse 5<br>8004 Zürich</p>
+    <p>
+
+      <b>Dr. med. Jan von Overbeck</b> <br>
+      FMH Médecine interne et infectiologie, MSc, <br>
+      Fellow of American College of Physicina (FACP) <br>
+      jan.von.overbeck@icloud.com
+    </p>
+    <p><b>Milliways GmbH</b><br>Tizian & Luca Naterop<br>Bauhallengasse 5<br>8004 Zürich</p>
   </section>
 </div>
