--- a/source/localizable/dataprotection.html.erb
+++ b/source/localizable/dataprotection.html.erb
@@ -5,7 +5,8 @@
     <h2><%= t(:dataProtection) %></h2>
     <ul class="list">
       <li>Es wird kein Analysetool verwendet.</li>
-      <li>Alle Daten werden in der Schweiz gespeichert und erlauben keine Rückschlüsse auf Personen.</li>
+      <li>Alle Daten werden in der Schweiz gespeichert.</li>
+      <li>Wir verwenden die erfassten Daten nicht, um Rückschlüsse auf einzelne Personen zu ziehen.</li>
       <li>Die erfassten Daten werden ausschliesslich dazu benutzt, um die Pandemie zu bekämpfen.</li>
     </ul>
   </section>
