--- a/source/partials/_partners.erb
+++ b/source/partials/_partners.erb
@@ -1,3 +1,5 @@
 <div class="partners-wrap">
   <div class="partner"><img src="/images/partner/logo-bern.png" alt="Gesundheitsdirektion des Kantons Bern"></div>
+  <div class="partner"><img src="/images/partner/logo-eth.png" alt="ETH Zürich"></div>
+  <div class="partner"><img src="/images/partner/logo-bmi.png" alt="Biomedical Informatics"></div>
 </div>
