Imprint: fixed mailto links

--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -21,8 +21,8 @@
     </div>
     <h2><%= t(:imprint) %></h2>
     <p><b><%= t(:generalinfo) %></b><br><a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a></p>
-    <p><b><%= t(:press) %></b><br><a href="mailto:info@covidtracker.ch">press@covidtracker.ch</a></p>
-    <p><b><%= t(:technology) %></b><br><a href="mailto:info@covidtracker.ch">tech@covidtracker.ch</a></p>
+    <p><b><%= t(:press) %></b><br><a href="mailto:press@covidtracker.ch">press@covidtracker.ch</a></p>
+    <p><b><%= t(:technology) %></b><br><a href="mailto:tech@covidtracker.ch">tech@covidtracker.ch</a></p>
     <br>
     <p>
 
