--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -17,6 +17,8 @@
         <li><a target="_blank" href="https://www.nine.ch"><img src="/images/partner/logo-nine.png" alt="Nine Internet Solutions AG"></a></li>
         <li><a target="_blank" href="https://www.texetera.ch"><img src="/images/partner/logo-texetera.png" alt="Texetera GmbH"></a></li>
         <li><a target="_blank" href="https://www.triboni.ch"><img src="/images/partner/logo-triboni.png" alt="Triboni AG"></a></li>
+        <li><a target="_blank" href="https://www.esri.ch/de-ch/home"><img src="/images/partner/logo-esri.png" alt="Esri Schweiz"></a></li>
+        <li><a target="_blank" href="https://www.meierpartner.ch"><img src="/images/partner/logo-meierpartner.png" alt="Meier und Partner AG"></a></li>
       </ul>
     </div>
     <h2><%= t(:imprint) %></h2>
