--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -28,7 +28,7 @@
 
       <b>Dr. med. Jan von Overbeck</b> <br>
       FMH Médecine interne et infectiologie, MSc, <br>
-      Fellow of American College of Physicina (FACP) <br>
+      Fellow of the American College of Physicians (FACP) <br>
       jan.von.overbeck@icloud.com
     </p>
     <p><b>Milliways GmbH</b><br>Tizian & Luca Naterop<br>Bauhallengasse 5<br>8004 Zürich</p>
