Removed repeated 'out'.

--- a/source/localizable/response.en.html.erb
+++ b/source/localizable/response.en.html.erb
@@ -4,7 +4,7 @@
   <section class="subpage">
     <h2>Thanks!</h2>
     <p>Thank you for answering our questionnaire. Together we are stronger.</p>
-    <p>Please fill out out again, if:</p>
+    <p>Please fill out the form again, if:</p>
     <ul class="list">
       <li>One of the symptoms occurs</li>
       <li>You have tested positive for the coronavirus</li>
