Added menu to subpages

--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,6 +1,7 @@
 <header class="header">
+  <%= partial "partials/navigation" %>
   <div class="container">
     <% link_to '/index.html' do %><%= partial "partials/icon" %><% end %>
-    <h1><%= link_to t(:title), '/index.html' %></h1>
+    <!--<h1><%= link_to t(:title), '/index.html' %></h1>-->
   </div>
 </header>
