--- a/source/localizable/map.en.html.erb
+++ b/source/localizable/map.en.html.erb
@@ -5,7 +5,7 @@
     <h2>Map</h2>
     <p>Total answers: <b><span id="totalsubs">lade...</span></b></p>
     <h3>Fraction of potential clinical cases</h3>
-    <p>Fraction of positively classified cases (accoring to our case definition) divided by total number of submissions, per zip code. </p>
+    <p>Fraction of positively classified cases (according to our case definition) divided by total number of submissions, per zip code. </p>
     <div class="map-container">
       <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=fraction " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
