--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,13 +25,14 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
   </head>
-  <body data-lang="<%= I18n.locale %>">  
+  <body data-lang="<%= I18n.locale %>">
     <%= yield %>
-    
+
     <%= partial "partials/footer" %>
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=Element.prototype.dataset%2Cdocument.querySelector"></script>
     <%= javascript_include_tag "date-input-polyfill.min" %>
+    <%= javascript_include_tag "persistence" %>
     <%= javascript_include_tag "site" %>
   </body>
 </html>
