--- a/source/localizable/response.en.html.erb
+++ b/source/localizable/response.en.html.erb
@@ -4,6 +4,9 @@
   <section class="subpage">
     <h2>Thanks!</h2>
     <p>Thank you for answering our questionnaire. Together we are stronger.</p>
+
+    <p>Your participation code is: <span id="yourCodeHere" class="code"></span></p>
+
     <p>Please fill out the form again, if:</p>
     <ul class="list">
       <li>One of the symptoms occurs</li>
