--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,7 +30,7 @@
 
     <%= partial "partials/footer" %>
 
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=Element.prototype.dataset%2Cdocument.querySelector"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=Element.prototype.dataset%2Cdocument.querySelector%2CArray.prototype.includes"></script>
     <%= javascript_include_tag "date-input-polyfill.min" %>
     <%= javascript_include_tag "persistence" %>
     <%= javascript_include_tag "site" %>
