Removed .de in new localized German html files, since it's the default language. Added proper targets to other pages.

--- a/source/localizable/map.html.erb
+++ b/source/localizable/map.html.erb
@@ -17,16 +17,13 @@
     </div>
   </section>
   <script>
-    
-    const http = new XMLHttpRequest()
-    http.open("GET", "https://api.covidtracker.ch/count")
-    http.send()
-    http.onload = () => { 
-      let s = http.responseText;
-      s = s.slice(0, 3) + "'" + s.slice(3);
-      document.getElementById('totalsubs').innerHTML = s
-    }
-
-
+  var http = new XMLHttpRequest();
+  http.open("GET", "https://api.covidtracker.ch/count");
+  http.send();
+  http.onload = function() {
+    var s = http.responseText;
+    s = s.slice(0, 3) + "'" + s.slice(3);
+    document.getElementById('totalsubs').innerHTML = s;
+  }
   </script>
 </div>
