--- a/source/localizable/consent.fr.html.erb
+++ b/source/localizable/consent.fr.html.erb
@@ -24,8 +24,8 @@
 
     <ul>
       <li>Je participe à cette étude sur une base volontaire et je dispose d’un droit de retrait à tout moment sans avoir à fournir de justification et sans m’exposer à des conséquences négatives.</li>
-      <li>J’ai été informé de manière <a href="/study_info.html" target="_blank">écrite</a> des objectifs et des modalités de l’étude, des avantages et inconvénients ainsi que des risques encourus.</li>
-      <li>J’ai lu la fiche d’informations à l’attention des participants. Je suis conscient que je peux adresser mes questions à propos de l’étude par e-mail à <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>. Mes questions concernant la participation à l'étude ont reçu une réponse satisfaisante. J’ai reçu une copie de la fiche <a href="/study_info.html" target="_blank">d’information aux participants</a> ainsi que le <a href="/consent.html">formulaire de consentement</a>.</li>
+      <li>J’ai été informé de manière <a href="/fr/study_info.html" target="_blank">écrite</a> des objectifs et des modalités de l’étude, des avantages et inconvénients ainsi que des risques encourus.</li>
+      <li>J’ai lu la fiche d’informations à l’attention des participants. Je suis conscient que je peux adresser mes questions à propos de l’étude par e-mail à <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>. Mes questions concernant la participation à l'étude ont reçu une réponse satisfaisante. J’ai reçu une copie de la fiche <a href="/fr/study_info.html" target="_blank">d’information aux participants</a> ainsi que le <a href="/fr/consent.html" target="_blank">formulaire de consentement</a>.</li>
       <li>J’ai disposé de suffisamment de temps pour me décider à participer à l’étude.</li>
       <li>En cochant la case ci-dessous, je certifie que je remplis les prérequis énoncés dans la fiche d’information aux participants.</li>
       <li>J’autorise les personnes en charge de l’étude et les membres de la commission éthique à accéder aux données brutes, dans le respect des règles de confidentialité.</li>
