Added About (study info) and Consent to navbar

--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -9,6 +9,8 @@
     <nav class="main-nav">
       <ul>
         <li><%= link_to 'Home', '/index.html' %></li>
+        <li><%= link_to 'About', '/study_info.html' %></li>
+        <li><%= link_to 'Consent', '/consent.html' %></li>
         <li><%= link_to 'Map', '/map.html' %></li>
         <li><%= link_to 'FAQ', '/faq.html' %></li>
         <li><%= link_to 'Blog', '/index.html' %></li>
