--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -1,3 +1,16 @@
+---
+ageRanges:
+  - 0-10
+  - 11-20
+  - 21-30
+  - 31-40
+  - 41-50
+  - 51-60
+  - 61-70
+  - 71-80
+  - 81-90
+  - 90+
+---
 <div class="message hidden" id="msg-error">
   <div class="container">
     Error
@@ -88,9 +101,13 @@
       <!-- ---------------------------------------------------------
       --- age
       ---------------------------------------------------------- -->
-      <div class="input-wrap input-wrap--text">
-        <label class="label" for="yearOfBirth"><%= t(:birthyear) %> *</label>
-        <input id="yearOfBirth" name="yearOfBirth" class="input input--short" type="number" max="2020" min="1900" step="1" required>
+      <div class="input-wrap">
+        <label for="ageRangeDropdown" class="label"><%= t(:age) %> *</label>
+        <select id="ageRangeDropdown" name="ageRange" class="dropdown">
+          <% current_page.data.ageRanges.each do |range| %>
+            <option value="<%= range %>"><%= range %></option>
+          <% end %>
+        </select>
       </div>
 
       <!-- ---------------------------------------------------------
