--- a/source/localizable/map.fr.html.erb
+++ b/source/localizable/map.fr.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <div class="container container--wide">
-  <section class="map">
+  <section class="map map--detail">
     <h3></h3>
     <div class="map-container">
       <iframe src="https://experience.arcgis.com/experience/e2059f05649442dd943bddfaf5ce1bb8/page/page_2/?views=view_3" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
