--- a/source/localizable/map.en.html.erb
+++ b/source/localizable/map.en.html.erb
@@ -1,22 +1,23 @@
 <%= partial "partials/header" %>
 <%= partial "partials/homelink" %>
-<div class="container">
-  <section class="map">
-    <h2>Map</h2>
-    <p>Total answers: <b><span id="totalsubs">lade...</span></b></p>
-    <h3>Fraction of potential clinical cases</h3>
-    <p>Fraction of positively classified cases (according to our case definition) divided by total number of submissions, per zip code. </p>
-    <div class="map-container">
-      <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=fraction " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </div>
-  </section>
-</div>
 
 <div class="container container--wide">
   <section class="map map--detail">
     <h3>Detailed map</h3>
+    <p>Total answers: <b><span id="totalsubs">lade...</span></b></p>
     <div class="map-container">
-      <iframe src="https://experience.arcgis.com/experience/e2059f05649442dd943bddfaf5ce1bb8/page/page_2/?views=view_3" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe src="https://experience.arcgis.com/experience/e2059f05649442dd943bddfaf5ce1bb8/" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+  </section>
+</div>
+
+<div class="container">
+  <section class="map">
+    <h2>Heatmap</h2>
+    <h3>Fraction of potential clinical cases</h3>
+    <p>Fraction of positively classified cases (according to our case definition) divided by total number of submissions, per zip code. </p>
+    <div class="map-container">
+      <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=fraction " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
   </section>
 </div>
