--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -13,7 +13,12 @@
         <li><%= link_to 'Consent', '/consent.html' %></li>
         <li><%= link_to 'Map', '/map.html' %></li>
         <li><%= link_to 'FAQ', '/faq.html' %></li>
-        <li><%= link_to 'Blog', '/index.html' %></li>
+        <%
+=begin
+%><li><%= link_to 'Blog', '/index.html' %></li>
+<%
+=end
+%>
       </ul>
     </nav>
   </div>
