added italian translation and link to blog

--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -13,12 +13,7 @@
         <li><%= link_to 'Consent', '/consent.html' %></li>
         <li><%= link_to 'Map', '/map.html' %></li>
         <li><%= link_to 'FAQ', '/faq.html' %></li>
-        <%
-=begin
-%><li><%= link_to 'Blog', '/index.html' %></li>
-<%
-=end
-%>
+        <li><%= link_to 'Blog', 'https://covid19survey.ethz.ch/blog' %></li>
       </ul>
     </nav>
   </div>
