--- a/source/localizable/map.fr.html.erb
+++ b/source/localizable/map.fr.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container container--wide">
   <section class="map map--detail">
-    <h3>Map</h3>
+    <h3>Carte détaillée</h3>
     <p>Nombre total de réponses: <b><span id="totalsubs">lade...</span></b></p>
     <div class="map-container">
       <iframe src="https://experience.arcgis.com/experience/e2059f05649442dd943bddfaf5ce1bb8/" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -13,9 +13,9 @@
 
 <div class="container">
   <section class="map">
-    <h2>Heatmap</h2>
+    <h2>Carte de chaleur</h2>
     <h3>Proportion de suspicions cliniques</h3>
-    <p>La carte montre la proportion de cas positifs selon la « case définition » et le total des réponses par numéro postal. .</p>
+    <p>La carte montre la proportion de cas positifs selon la « case définition » et le total des réponses par numéro postal.</p>
     <div class="map-container">
       <iframe src="https://script.google.com/a/macros/astina.ch/s/AKfycbyJ6R3G59HfS5YzkQvmY9xSbf-PsmZbAHDEA6ZwYAO_MkuCRo6v/exec?type=fraction " width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
