Updated form target to point to testing server.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -43,7 +43,7 @@ ageRanges:
 <div class="form" id="form">
   <div class="container">
 
-    <form action="http://localhost:5000/form" onsubmit="persistForm()" method="post" id="covid-form">
+    <form action="https://covid-stage.apps-customer.210235761750.ninegcp.ch/form" onsubmit="persistForm()" method="post" id="covid-form">
 
       <div class="boxed code-chooser">
         <!-- ---------------------------------------------------------
