Adds WIP localizations of the "about"/"consent" links now in the body. Adds margin to set them off from the form a bit.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -43,9 +43,11 @@ ageRanges:
 <div class="form" id="form">
   <div class="container">
 
-    <div><%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %></div>
-    <div><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></div>
-    
+    <ul style="margin-bottom: 1em;">
+      <li><%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %></li>
+      <li><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></li>
+    </ul>
+
     <form action="https://covid-stage.apps-customer.210235761750.ninegcp.ch/form" onsubmit="persistForm()" method="post" id="covid-form">
       <div class="boxed code-chooser">
         <!-- ---------------------------------------------------------
