--- a/source/localizable/map.it.html.erb
+++ b/source/localizable/map.it.html.erb
@@ -23,14 +23,5 @@
 </div>
 
 <script>
-  
-const http = new XMLHttpRequest()
-http.open("GET", "https://api.covidtracker.ch/count")
-http.send()
-http.onload = () => { 
-  let s = http.responseText;
-  s = s.slice(0, 3) + "'" + s.slice(3);
-  document.getElementById('totalsubs').innerHTML = s;
-}
-
+updateTotalSubs('totalsubs');
 </script>
