--- a/source/localizable/response.html.erb
+++ b/source/localizable/response.html.erb
@@ -11,8 +11,19 @@
       <li>Sie unter Quarantäne stehen</li>
     </ul>
     <p>Dieser Corona-Tracker wird nur dann nützlich sein, wenn eine grosse Anzahl von Personen ihn ausfüllt. Bitte verbreiten Sie ihn so weit wie möglich in Ihrem Umfeld. Helfen Sie älteren Menschen, ihn auszufüllen. Und bleiben Sie gesund!</p>
+
+    <p>Hier ist eine zufällige Katze als Dank:</p>
+
+    <div id="randomKittenBox"></div>
+
     <div class="response-share">
       <%= partial "partials/social" %>
     </div>
   </section>
 </div>
+
+<script>
+  onDOMReady(function() {
+    retrieveCatImage('randomKittenBox');
+  });
+</script>
