Added "regularly" to post-survey prompt. Reordered prompts in behavior, comorbidities.

--- a/source/localizable/response.en.html.erb
+++ b/source/localizable/response.en.html.erb
@@ -13,7 +13,7 @@
       <li>You have tested positive for the coronavirus</li>
       <li>You are under quarantine</li>
     </ul>
-    <p>This campaign will be especially useful if a large number of people fill out the questionnaire. Please spread it as widely as possible. Help older people in particular by filling it out. And stay healthy!</p>
+    <p>This campaign will be especially useful if a large number of people fill out the questionnaire regularly. Please spread it as widely as possible. Help older people in particular by filling it out. And stay healthy!</p>
 
     <p>Here's a random cat as thanks:</p>
 
