--- a/source/localizable/response.fr.html.erb
+++ b/source/localizable/response.fr.html.erb
@@ -11,7 +11,7 @@
         <li>vous devez rester en quarantaine.</li>
       </ul>
     </p>
-    <p>Plus les personnes répondant à ce questionnaire seront nombreuses et plus la campagne démontrera son utilité. Merci de bien vouloir le transmettre à votre entourage, en aidant au besoin les personnes âgées qui auraient des difficultés à le remplir. Et prenez bien soin de vous !</p>
+    <p>Plus il y aura de personnes répondant régulièrement à ce questionnaire, plus la campagne démontrera son utilité. Merci de bien vouloir le transmettre à votre entourage, en aidant au besoin les personnes âgées qui auraient des difficultés à le remplir. Et prenez bien soin de vous !</p>
 
     <p>Voici un chat au hasard en guise de remerciement:</p>
 
