--- a/source/localizable/response.html.erb
+++ b/source/localizable/response.html.erb
@@ -10,7 +10,7 @@
       <li>Sie positiv auf Covid-19 getestet werden</li>
       <li>Sie unter Quarantäne stehen</li>
     </ul>
-    <p>Dieser Corona-Tracker wird nur dann nützlich sein, wenn eine grosse Anzahl von Personen ihn ausfüllt. Bitte verbreiten Sie ihn so weit wie möglich in Ihrem Umfeld. Helfen Sie älteren Menschen, ihn auszufüllen. Und bleiben Sie gesund!</p>
+    <p>Dieser Corona-Tracker ist nur dann nützlich, wenn eine große Anzahl von Personen ihn regelmäßig ausfüllt. Bitte verbreiten Sie ihn so weit wie möglich in Ihrem Umfeld. Helfen Sie älteren Menschen, ihn auszufüllen. Und bleiben Sie gesund!</p>
 
     <p>Hier ist eine zufällige Katze als Dank:</p>
 
