--- a/source/localizable/response.it.html.erb
+++ b/source/localizable/response.it.html.erb
@@ -11,7 +11,7 @@
         <li>si trovi in quarantena</li>
       </ul>
     </p>
-    <p>Più persone partecipano al sondaggio, maggiori saranno i benefici della campagna. La preghiamo perciò di diffondere il più possibile il sistema di tracciamento nella cerchia dei suoi conoscenti. Aiuti le persone anziane a compilare il modulo. E stia in salute!</p>
+    <p>Più persone partecipano regolarmente al sondaggio, maggiori sono i vantaggi della campagna. La preghiamo perciò di diffondere il più possibile il sistema di tracciamento nella cerchia dei suoi conoscenti. Aiuti le persone anziane a compilare il modulo. E stia in salute!</p>
 
     <p>Ecco un gatto a caso come ringraziamento:</p>
 
