Removed monospace styling on code dropdown

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -73,7 +73,7 @@ ageRanges:
         ---------------------------------------------------------- -->
         <div id="wrap-participantcode" class="input-wrap input-wrap--text js-hide">
           <label class="label" for="participantCodeList"><%= t(:participantCode) %></label>
-          <select id="participantCodeList" name="participantCodeList" class="dropdown code">
+          <select id="participantCodeList" name="participantCodeList" class="dropdown">
             <option value="__none__"><%= t(:unlistedCode) %></option>
           </select>
           <div id="participantCodeManualBox" class="input-wrap input-wrap--text hidden">
