--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -630,3 +630,17 @@ section.map {
   padding: 0px 2px;
   vertical-align: bottom;
 }
+
+.survey_additional_header {
+  margin: 10px;
+}
+
+.survey_additional {
+  margin: 10px;
+  font-size: 14px;
+}
+
+.survey_additional_part2 {
+  margin: 10px;
+  font-size: 14px;
+}
