--- a/source/localizable/map.html.erb
+++ b/source/localizable/map.html.erb
@@ -4,7 +4,7 @@
 <div class="container container--wide">
   <section class="map map--detail">
     <h3>Detailkarte</h3>
-    <p>Total Antworten: <b><span id="totalsubs">lade...</span></b></p>
+    <p>Total Antworten: <b><span id="totalsubs">t(:loading)</span></b></p>
     <div class="map-container">
       <iframe src="https://experience.arcgis.com/experience/e2059f05649442dd943bddfaf5ce1bb8/" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
