Reverted form action to point to the staging server.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -54,8 +54,12 @@ ageRanges:
     <div class="survey_additional_part2">
       <%= t(:surveyAdditionalInformationPartTwo) %>
     </div>
-<!--    <form action="https://covid-stage.apps-customer.210235761750.ninegcp.ch/form" onsubmit="persistForm()" method="post" id="covid-form">-->
+
+    <!--
     <form action="http://localhost:5000/form" onsubmit="persistForm()" method="post" id="covid-form">
+    -->
+
+    <form action="https://covid-stage.apps-customer.210235761750.ninegcp.ch/form" onsubmit="persistForm()" method="post" id="covid-form">
       <div class="boxed code-chooser">
         <!-- ---------------------------------------------------------
         --- first-time survey?
